fix resource table on firefox

--- a/app/assets/stylesheets/foster_family_agency.scss
+++ b/app/assets/stylesheets/foster_family_agency.scss
@@ -18,6 +18,12 @@
   }
 }
 
+.resource-table {
+  .table {
+    clear: both;
+  }
+}
+
 @media (max-width: 768px) {
   .form-foster-family-agency {
     max-width: 100%;
